clock disapear on small screen fix

--- a/css/sharpay2.webflow.css
+++ b/css/sharpay2.webflow.css
@@ -1786,6 +1786,18 @@ img.flag {
         padding-right: 20px;
         padding-left: 20px
     }
+
+    #token .l-col {
+      flex-grow: 1;
+    }
+
+    #token .r-col {
+      flex-grow: 2;
+    }
+
+    #clockChart {
+      width: 100%;
+    }
 }
 
 @media (max-width:767px) {
